# watts

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  .wci.yml  CHANGELOG.md  LICENSE  LICENSE.doc  README.md  paper.bib  paper.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
examples/: README.md  sam_example.py  sam_template
examples/1App_ABCE_C2N/: README.md  abce_template.txt  watts_exec.py
examples/1App_ACCERT_PWR12BE/: ACCERT_input.son  ACCERT_input.tmpl  README.md  watts_exec.py
examples/1App_BISON_MetalFuel/: README.md  watts_exec.py
examples/1App_MCNP_Jezebel/: README.md  mcnp_template  watts_exec.py
examples/1App_MOOSE-MultiApp_Simple/: README.md  sub.i  watts_exec.py
examples/1App_OpenMC_VHTR/: README.md  openmc_template.py  watts_comprehensive.son  watts_exec.py  watts_wb.son
examples/1App_PyARC_UnitCell/: README.md  lumped.son  pyarc_template  watts_comprehensive.son  watts_exec.py  watts_wb.son
examples/1App_RELAP5_SingleChannel/: README.md  relap5_template  watts_comprehensive.son  watts_exec.py  watts_wb.son
examples/1App_SAM_VHTR/: README.md  watts_comprehensive.son  watts_exec.py  watts_wb.son
examples/1App_SAS_MultiTemplates_SodiumLoop/: Channel  README.md  sas_template  watts_comprehensive.son  watts_exec.py
examples/1App_SAS_SinglePin/: README.md  watts_exec.py
examples/1App_SAS_SodiumLoop/: README.md  sas_template  watts_comprehensive.son  watts_exec.py
examples/Main_SAM-OpenMC_VHTM/: watts_main.py
examples/Main_SAM-OpenMC_VHTR/: watts_main.py
examples/MultiApp_Griffin-BISON-Sockeye_MR/: MP_ss_moose.i  MP_trN_moose.i  MP_tr_moose.i  README.md  watts_exec.py
examples/MultiApp_MOOSE_Simple/: watts_exec.py
examples/MultiApp_SAM-OpenMC_VHTM/: README.md
examples/MultiApp_SAM-OpenMC_VHTR/: README.md  watts_exec.py
examples/MultiApp_SAM_SimpleJunction_Workbench/: README.md  sam_template_0  sam_template_1  watts_wb.son
examples/MultiStep_Griffin-BISON-Sockeye_MR/: MP_ss_griffin.tmpl  MP_ss_sockeye.i  MP_trN_griffin.tmpl  MP_tr_griffin.tmpl  MP_tr_sockeye.i  README.md  unitcell_nogap_hom_xml_G11_df_MP.xml  watts_exec.py
examples/MultiTemplates_SAS_SodiumLoop/: DecayPower  PRIMAR4  PointKinetics  Primary
examples/Opt_SAM-OpenMC_VHTM-pymoo/: watts_exec.py
examples/Opt_SAM-OpenMC_VHTM-scipy/: README.md  watts_exec.py  watts_main.py
examples/Opt_SAM-OpenMC_VHTR-pymoo/: watts_exec.py
examples/Opt_SAM-OpenMC_VHTR-scipy/: README.md  watts_exec.py
examples/Optimization_PyARC_DAKOTA/: ._README.md  ._dakota_driver.py  ._dakota_driver_ori.py  ._dakota_watts_opt.in  ._input_original.tmpl  ._pyarc_template  ._watts_dakota_exec.py  ._watts_pyarc_exec.py  README.md  dakota_driver.py  dakota_driver_ori.py  dakota_watts_opt.in  input.tmpl  pyarc_input.isotxs  pyarc_template  watts.drive  watts_dakota_exec.py  watts_exec.py  watts_pyarc_exec.py
examples/Optimization_PyARC_pymoo/: pyarc_input.isotxs  pyarc_template  watts_exec.py
examples/Optimization_SAM-OpenMC_VHTR-pymoo/: README.md  watts_exec.py
examples/Optimization_SAM-OpenMC_VHTR-scipy/: watts_exec.py
examples/ParamStudy_SAM_SimpleJunction_Workbench/: README.md  watts_comprehensive.son  watts_wb.son
examples/ParamStudy_SAM_VHTM/: README.md
examples/ParamStudy_SAM_VHTR/: README.md  results.csv  watts_exec.py
examples/PicardIterations_SAM-OpenMC_VHTM/: README.md  openmc_template.py
examples/PicardIterations_SAM-OpenMC_VHTR/: README.md  openmc_template.py  watts_exec.py
examples/PicardIterations_SAM-OpenMC_VHTR_Workbench/: README.md  openmc_template.py  watts_comprehensive.son  watts_wb.son
examples/Sens_SAM-OpenMC_VHTM-scipy-LHS/: openmc_template.py  watts_exec.py
examples/Sens_SAM-OpenMC_VHTR-scipy-LHS/: README.md  openmc_template.py
examples/Sensitivity_SAM-OpenMC_VHTR-scipy-LHS/: watts_exec.py
examples/example1_SAM/: example1.py
examples/example1a_BISON/: example1a.py
examples/example1a_SAM/: example1a.py
examples/example1b_BISON/: bison_template  example1b.py
examples/example1c_PyARC/: example1c.py  pyarc_template
examples/example1d_SAM_ParametricStudy/: README.md  example1d.py  sam_template
examples/example2_SAM_OpenMC/: example2.py  openmc_template.py
examples/example3_iterations/: example3.py
examples/example4_main/: example4.py
examples/example4_optimization/: example4.py  openmc_template.py
examples/example4a_opt_scipy/: example4a.py  openmc_template.py
examples/example4b_LHS_scipy/: README.md  example4.py  example4b.py
examples/example4b_LSH_scipy/: example4b.py
examples/example4c_opt_pymoo/: README.md  example4c.py
examples/example5_BISON/: bison_template  example5.py
examples/example5_moose_wf/: 3D_unit_cell_FY21_simple.e  MP_griffin.tmpl  MP_moose.tmpl  example5.py
examples/example5_multiapps/: README.md  example5a.py  main_in.e
examples/example5a_multiapps/: example5a.py  main.tmpl  sub.i
examples/example6_adv_multiapps/: 3D_unit_cell_FY21_level-1_bison.e  3D_unit_cell_FY21_supersimple.e  MP_ss_griffin.tmpl  MP_ss_moose.i  MP_ss_sockeye.i  MP_trN_griffin.tmpl  MP_trN_sockeye.i  example6.py
examples/example7a_SAS/: example7a.py  sas_template
examples/example7b_SAS/: example7b.py
examples/initial_OpenMC_SAM/: GCMR_OpenMC.py  GCMR_SAM.py  GCMR_ardent.py  GCMR_workflow.py  (+5 more)
scripts/: setup_conda_wb.sh  setup_openmc.sh  workbench.sh
tests/: Am244.h5  conftest.py  test_console.py  test_database.py  test_expand_element.py  test_fileutils.py  test_model.py  test_parameters.py  test_plugin.py  test_plugin_openmc.py  test_results.py  test_template.py
(+128 files in other folders)
