[metadata]
name = watts
version = 0.0.1
author = UChicago Argonne, LLC
author_email = nstauff@anl.gov
description = Workflow and Template Toolkit for Simulation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    Jinja2
    h5py
    numpy
    pandas
    platformdirs
    prettytable

[options.extras_require]
test = pytest

[options.packages.find]
where = src
