[metadata]
name = watts
version = 0.3.0-dev
author = UChicago Argonne, LLC
author_email = watts@anl.gov
description = Workflow and Template Toolkit for Simulation
long_description =
    WATTS (Workflow and Template Toolkit for Simulation) provides a set of
    Python classes that can manage simulation workflows for multiple codes where
    information is exchanged at a coarse level. For each code, input files rely
    on placeholder values that are filled in based on a set of user-defined
    parameters.

    WATTS is being developed with support from Argonne National Laboratory. For
    any questions, please contact [watts@anl.gov](mailto:watts@anl.gov).
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/watts-dev/watts
project_urls =
    Bug Tracker = https://github.com/watts-dev/watts/issues
    Documentation = https://watts.readthedocs.io
    Source Code = https://github.com/watts-dev/watts
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    Jinja2
    dill
    numpy
    pandas
    platformdirs
    prettytable
    astropy

[options.extras_require]
test = pytest
docs =
    sphinx
    pydata_sphinx_theme
    sphinx-autodoc-typehints

[options.packages.find]
where = src
